--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.ipynb_checkpoints/geophy-checkpoint.ipynb
+*.ipynb_checkpoints
 glove.42B.300d.txt
 glove.6B.100d.txt
 new_data/
@@ -21,6 +23,9 @@ __pycache__
 *.egg-info
 *~
 *.bak
+*.xlsx
+*.xlsx#
+*.geojson
 .ipynb_checkpoints
 .tox
 .DS_Store
